Create UI for ShoppingCart, update Dockerfile